✨ (backend/docs/DOCS.ipynb): enhance documentation clarity by refining backend setup explanations, correcting typos, and detailing frontend technology choices for improved understanding of the full-stack application architecture.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -138,9 +138,9 @@
    "source": [
     "# Backend Setup\n",
     "\n",
-    "From the tools and libraries in the project, it was clear that `Python` was the best-fit programming language for setting up the backend service for the app. Fortunately, I already use Python a lot so I have a lot of experience working on small and big projects with it. For this one, I decided to keep things simple and used as minimal modules and functions as possible while still following best coding practices.\n",
+    "For the backend of this app, Python was the obvious choice because it works well with the tools and libraries needed for the project. I use Python a lot, so I felt comfortable building both small and large parts of the backend with it. For this project, I kept things simple and only used the modules and functions I really needed, while still following good coding practices.\n",
     "\n",
-    "However, I decided to use [uv](https://docs.astral.sh/uv/) when setting up the backend rather than using something like pip. This is because I found that using this Rust-based package and project manager was a very good developer experience in handling the Python environment and interpreter, as well as keeping dependencies in sync. Essentially, it is an `pnpm` for Python!"
+    "Instead of using pip to manage Python packages, I chose [uv](https://docs.astral.sh/uv/). I like uv because it’s fast (it’s built with Rust) and makes it easy to manage the Python environment and keep all the dependencies in sync. It feels a lot like using `pnpm` for JavaScript, but for Python projects."
    ]
   },
   {
@@ -175,7 +175,7 @@
     "\n",
     "From there, setting up the system prompts, as well as using `langchain-postgres` to differentiate between the `HumanMessage` as well as `AIMessage`, setting up the chat workflows became easy.\n",
     "\n",
-    "### Streaming Chat Comlpetions\n",
+    "### Streaming Chat Completions\n",
     "\n",
     "Streaming responses from Ollama via Langchain was one of my first hurdles in the project, since I haven't used these before and thus I did not know how to setup streaming. I understood streaming from a network point of view but not how to do it via Python. Unfortunately, this was one of the areas as well that using ChatGPT faltered since it did not set it up correctly, and there were a lot of conflicting ways to do it via different langchain libraries that evolved over the years. Fortunately, I was able to find this github issue that started way back in 2023 that taught me how to implement streaming https://github.com/langchain-ai/langchain/issues/13333\n",
     "\n",
@@ -282,6 +282,18 @@
     "  --header 'User-Agent: insomnia/11.2.0'\n",
     "```\n",
     "\n",
+    "```bash\n",
+    "curl --request POST \\\n",
+    "  --url http://localhost:8002/stream \\\n",
+    "  --header 'Content-Type: application/json' \\\n",
+    "  --header 'User-Agent: insomnia/11.2.0' \\\n",
+    "  --data '{\n",
+    "\t\"name\": \"Red\",\n",
+    "\t\"session_id\": \"b95eecaa-f30f-45b1-bcc2-acb984dce9a5\",\n",
+    "\t\"content\": \"Who are you?\"\n",
+    "}'\n",
+    "```\n",
+    "\n",
     "\n"
    ]
   },
@@ -289,7 +301,235 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# React Frontend"
+    "# React Frontend\n",
+    "\n",
+    "Instead of using the suggested Python UI libraries, I chose to build the frontend with React and TypeScript. I made this choice because I’m already comfortable with React, so it was much faster for me to get started and connect it to the Python backend. Using React also gave me more control over how the app looks and works, letting me create a user interface that is both good-looking and easy to use.\n",
+    "\n",
+    "Here are the main libraries and tools I used:\n",
+    "- [React](https://react.dev/) – for building the user interface\n",
+    "- [Vite](https://vite.dev/) – for fast bundling and serving of React code (faster than Next.js or Create React App)\n",
+    "- [Tanstack Start](https://tanstack.com/start/latest) – for easy file routing and server functions using RPCs\n",
+    "- [TailwindCSS](https://tailwindcss.com/) – for quick and simple styling with utility classes\n",
+    "- [shadcn/ui](https://ui.shadcn.com/) – for ready-to-use, reusable UI components\n",
+    "\n",
+    "## User Handling\n",
+    "I used [react-hook-form](https://www.react-hook-form.com/) with [zod](https://zod.dev/) in order to validate the input for the user's username. This made it easy for me since the boilerplate was already setup, and I just passed the user's username as a URL parameteter to the chat page\n",
+    "\n",
+    "```tsx\n",
+    "const form = useForm<z.infer<typeof usernameFormSchema>>({\n",
+    "  resolver: zodResolver(usernameFormSchema),\n",
+    "  defaultValues: {\n",
+    "    username: \"\",\n",
+    "  },\n",
+    "})\n",
+    "\n",
+    "function onSubmit(values: z.infer<typeof usernameFormSchema>) {\n",
+    "  // generate uuid v4 \n",
+    "  const { username } = values\n",
+    "  const session_id = crypto.randomUUID()\n",
+    "  navigate({ to: '/chat/$session_id', params: { session_id }, search: { username } })\n",
+    "}\n",
+    "```\n",
+    "## Threads Sidebar\n",
+    "First, there is a navigation component that basically retrieves a user's list of past threads, if any, so that the user can read or chat with any of them again. One of the problems I had with this one was providing a way to render the title with the emoji correctly, truncate long titles, as well as have a snappy feedback for whenever a user \"creates\" a new thread \n",
+    "\n",
+    "You can see here the code that gets the sessions from the `/sessions` endpoint in the Backend API\n",
+    "\n",
+    "```ts\n",
+    "export const getSessions = createServerFn({\n",
+    "  method: 'GET',\n",
+    "  response: 'data',\n",
+    "}).validator(({ name, session_id }: { name: string, session_id: string }) => {\n",
+    "  return {\n",
+    "    name: name,\n",
+    "    session_id: session_id,\n",
+    "  }\n",
+    "}).handler(async ({ data }) => {\n",
+    "  try {\n",
+    "    const url = `${import.meta.env.VITE_BACKEND_BASE_URL}/sessions?name=${data.name}`\n",
+    "  \n",
+    "    const response: AxiosResponse<SessionData[]> = await axios.get(url)\n",
+    "\n",
+    "    const sessions = response.data.slice(0, 15)\n",
+    "\n",
+    "    // check if session_id is in the sessions, if not, add it at the top of the list with the title \"New Thread\"\n",
+    "    if (!sessions.some((session) => session.id === data.session_id)) {\n",
+    "      sessions.unshift({\n",
+    "        id: data.session_id,\n",
+    "        title: \"🧵 New Thread\",\n",
+    "        username: data.name,\n",
+    "        isNew: true,\n",
+    "      })\n",
+    "    }\n",
+    "\n",
+    "    return sessions\n",
+    "  } catch (err) {\n",
+    "    // console.error(err)\n",
+    "    return []\n",
+    "  }\n",
+    "})\n",
+    "```\n",
+    "I found that setting up all of the validation, as well as the static types for the returned JSON was good since it is easier to read and debug, can be understood by AI agents, as well as the autocomplete is just a quality of life that is leagues ahead of other languages or frameworks.\n",
+    "\n",
+    "## Thread/Session Handling\n",
+    "In order to simplify it, as well as seeing how other chat apps do it, each \"thread\" or \"conversation\" is represented by a unique UUID to reference that thread. Thus, I just render this via the `/chat/<uuid>` endpoint in the website. \n",
+    "\n",
+    "\n",
+    "Thus, the UI just needs to do three things:\n",
+    "- retrieve old messages (for old threads)\n",
+    "- provide a way to input a user's message\n",
+    "- provide a way to get the assistant's response\n",
+    "\n",
+    "## Message Input\n",
+    "This one took me a while to setup, as I had to setup a `<Select/>` component which allows the user to select what chat model to use (from the available models via the Backend API). I also had to setup a `<Textarea/>` component that allows the user to input multi-line text for the Chat workflow.\n",
+    "\n",
+    "I also invested some time making it pretty, and fixed to the chat window at the bottom. I like how the glassmorphism effect is rendered through the built-in `background opacity` & `backdrop blur` in Tailwind\n",
+    "\n",
+    "```tsx\n",
+    "<div className=\"isolate backdrop-blur-sm flex flex-row items-center gap-2 p-2 bg-neutral-800/20 border-[1px] border-b-0 border-neutral-800 rounded-xl rounded-b-none pb-0\">\n",
+    "  <div className=\"isolate rounded-xl bg-neutral-800/20 border-[1px] border-b-0 border-neutral-800 w-full flex flex-col rounded-b-none pb-0\">\n",
+    "    <div className=\"p-2\">\n",
+    "      <Textarea />\n",
+    "    </div>\n",
+    "    <div className=\"p-2 pt-0 flex justify-between items-center\">\n",
+    "      <Select/>\n",
+    "      <Button size=\"icon\" id='send-message-button' type=\"submit\" className='cursor-pointer'>\n",
+    "        <ArrowUp />\n",
+    "      </Button>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>\n",
+    "```\n",
+    "\n",
+    "## Chat Streaming\n",
+    "Once the user input is received, the Frontend Client just sends an HTTP request to the Backend API and waits for the Streamed Response. This streamed response is streamed to the Client State so that it can be smoothly rendered in the UI - producing the \"typing\" animation on the interface.\n",
+    "\n",
+    "```tsx\n",
+    "const response = await fetch(STREAMING_URL, {\n",
+    "  method: 'POST',\n",
+    "  headers: {\n",
+    "    'Content-Type': 'application/json',\n",
+    "  },\n",
+    "  body: JSON.stringify({\n",
+    "    name: username,\n",
+    "    session_id: session_id,\n",
+    "    content: content,\n",
+    "    model: values.model\n",
+    "  })\n",
+    "})\n",
+    "\n",
+    "if (!response.ok) {\n",
+    "  const errorData = await response.json()\n",
+    "  throw new Error(errorData.detail || 'Failed to send message')\n",
+    "}\n",
+    "\n",
+    "const reader = response.body?.getReader()\n",
+    "if (!reader) {\n",
+    "  throw new Error('No reader available')\n",
+    "}\n",
+    "\n",
+    "let accumulatedContent = ''\n",
+    "\n",
+    "while (true) {\n",
+    "  const { done, value } = await reader.read()\n",
+    "  if (done) break\n",
+    "\n",
+    "  // Convert the Uint8Array to text\n",
+    "  const chunk = new TextDecoder().decode(value)\n",
+    "  accumulatedContent += chunk\n",
+    "\n",
+    "  // Update the message with accumulated content\n",
+    "  setMessages(prevMessages =>\n",
+    "    prevMessages.map(msg =>\n",
+    "      msg.id === tempMessageId\n",
+    "        ? { ...msg, content: accumulatedContent }\n",
+    "        : msg\n",
+    "    )\n",
+    "  )\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## Conversation Display\n",
+    "I created a `<MessagesContainer/>` component that renders the messages from the backend (whether it be from user or assistant) and displays it through the UI\n",
+    "```tsx\n",
+    "function MessagesContainer({ messages }: { messages: MessageData[] }) {\n",
+    "  const { username } = Route.useSearch()\n",
+    "\n",
+    "  return (\n",
+    "    <div className='flex flex-col grow pb-40'>\n",
+    "      {messages.map((message) => (\n",
+    "        <MessageBox key={message.id} message={message} />\n",
+    "      ))}\n",
+    "\n",
+    "    </div>\n",
+    "  )\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This component only \"listens\" for new messages from the user or the assistant via the Backend API and renders it to the UI as soon and as smoothly as possible\n",
+    "\n",
+    "## QoL: Markdown Rendering and Syntax Highlighting\n",
+    "Since the chat UI was probably going to be used for coding tasks, one of the features that I tried to implement was syntax highlighting. This was hard to implement in React since there is not a lot of resources on doing it easily and allowing suport for multiple languages.\n",
+    "\n",
+    "Fortunately, after a lot of trial and error, I was able to make [highlight.js](https://highlightjs.org/) work, which makes reading code snippets on the UI much easier on the eyes. I also found that explicitly stating to the LLM through the system prompt to follow best markdown practices by explicitly stating the language also helped\n",
+    "\n",
+    "```tsx\n",
+    "<ReactMarkdown\n",
+    "  remarkPlugins={[remarkGfm]}\n",
+    "  rehypePlugins={[rehypeHighlight, rehypeRaw]}\n",
+    "  components={{\n",
+    "    // Custom styling for code blocks\n",
+    "    pre: ({ children, ...props }) => (\n",
+    "      <pre\n",
+    "        {...props}\n",
+    "        className=\"bg-gray-100 dark:bg-gray-800 rounded p-2 overflow-x-auto text-xs\"\n",
+    "      >\n",
+    "        {children}\n",
+    "      </pre>\n",
+    "    ),\n",
+    "    // Custom styling for inline code\n",
+    "    code: ({ children, className, ...props }: any) => {\n",
+    "      const match = /language-(\\w+)/.exec(className || '')\n",
+    "      return match ? (\n",
+    "        <code\n",
+    "          {...props}\n",
+    "          className={cn(\n",
+    "            'hljs',\n",
+    "            className,\n",
+    "            'bg-gray-100 dark:bg-gray-800 px-1 rounded text-xs  overflow-x-scroll scrollbar-thin'\n",
+    "          )}\n",
+    "        >\n",
+    "          {children}\n",
+    "        </code>\n",
+    "      ) : (\n",
+    "        <code\n",
+    "          {...props}\n",
+    "          className=\"bg-gray-100 dark:bg-gray-800 px-1 rounded text-xs overflow-x-scroll scrollbar-thin\"\n",
+    "        >\n",
+    "          {children}\n",
+    "        </code>\n",
+    "      )\n",
+    "    },\n",
+    "  }}\n",
+    ">\n",
+    "  {message.content}\n",
+    "</ReactMarkdown>\n",
+    "```\n",
+    "\n",
+    "## QoL: Auto-scroll\n",
+    "Additionally, one of the much-needed features was the auto-scroll for the UI, which makes the animation of the typing sequence in the streamed response much smoother. I honestly didn't know how to do it, but using AI and testing helped me figure it out\n",
+    "```tsx\n",
+    "  useEffect(() => {\n",
+    "    if (mainRef.current) {\n",
+    "      mainRef.current.scrollTo({\n",
+    "        top: mainRef.current.scrollHeight,\n",
+    "        behavior: 'smooth'\n",
+    "      })\n",
+    "    }\n",
+    "  }, [messages])\n",
+    "```\n",
+    "\n",
+    "Note that the effect listens for the updates to the `messages` state, which allows me to scroll on each message update from the streamed response - this made the UI feel much more natural"
    ]
   },
   {
